--- a/EFGetStarted.AspNetCore.ExistingDb/MillData.csproj
+++ b/EFGetStarted.AspNetCore.ExistingDb/MillData.csproj
@@ -23,5 +23,8 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\MillDetail\" />
+  </ItemGroup>
 
 </Project>
