fixed connection issues

--- a/EFGetStarted.AspNetCore.ExistingDb/MillData.csproj
+++ b/EFGetStarted.AspNetCore.ExistingDb/MillData.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
+    <UserSecretsId>9baaab51-e25b-4fad-97f1-5fb700b98fce</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
